--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>la receta</title>
 </head>
 <body>
-    <h1>Recetas Odin
-    </h1>
+    <h1>Recetas Odin</h1>
     <ul>
         <li><a href="/odin-recipes/napolitana.html">milanesa napolitana</a></li>
         <li><a href="/odin-recipes/empanada.html">empanada</a></li>
